src/test/ui/async-await/issue-64130-4-async-move.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-64130-4-async-move.rs:15:17
   |
LL | pub fn foo() -> impl Future + Send {
   |                 ^^^^^^^^^^^^^^^^^^ future created by async block is not `Send`
   |
   = help: the trait `Sync` is not implemented for `(dyn Any + Send + 'static)`
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-64130-4-async-move.rs:20:31
   |
LL |         match Client(Box::new(true)).status() {
   |               ---------------------- has type `&Client` which is not `Send`
LL |             200 => {
LL |                 let _x = get().await;
   |                               ^^^^^^ await occurs here, with `Client(Box::new(true))` maybe used later
...
LL |     }
   |     - `Client(Box::new(true))` is later dropped here
help: consider moving this into a `let` binding to create a shorter lived borrow
  --> $DIR/issue-64130-4-async-move.rs:18:15
   |
LL |         match Client(Box::new(true)).status() {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

